# skibidi-lang

./: CMakeLists.txt  CONTRIBUTING  README.md
examples/: hello.skbd
include/: ast.h  globals.h  lexer.h  parser.h
src/: ast.cpp  codegen.cpp  driver.cpp  globals.cpp  lexer.cpp  main.cpp  parser.cpp
